[tool.poetry]
name = "my-hello-world-lib"
version = "0.1.1"
description = ""
authors = ["IamYiu <drhieuvn@gmail.com>"]
readme = "README.md"
packages = [{include = "my_hello_world_lib"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core", "setuptools>=68.1.2"]
build-backend = "poetry.core.masonry.api"
